test/sema/exercise/struct_assignment.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number
}

struct S2 {
  x: number
}

fn main(): void {
  var s = S {x: 0};
  let s2 = S2 {x: 0};

  s = s;
  s = s2;
  // CHECK: [[# @LINE - 1 ]]:7: error: an expression of type 'S2' cannot be assigned to a variable of type 'S'
}
